--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "knex": "^0.95.2",
+    "pg": "^8.5.1",
     "request": "^2.88.2"
   },
   "devDependencies": {
