--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,12 @@ language: node_js
 node_js:
 - 14
 
+branches:
+  only:
+  - main
+
 before_script:
-- npm i express
-- npm i cors
+- npm install
 
 notifications:
   email: false
