--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon -r dotenv/config server.js"
+    "start": "nodemon -r dotenv/config server.js knexfile.js"
   },
   "repository": {
     "type": "git",
